add CommandLineRunner to insert sample data on app startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=ExamenJEE
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:examendb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Hibernate DDL auto (create, create-drop, update, validate, none)
+spring.jpa.hibernate.ddl-auto=update
+
+# Show SQL in console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Enable H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
